argo-cd/src/argocd/argocd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      containers:
      - name: argocd-server
        image: quay.io/argoproj/argocd:v2.11.0
        ports:
        - containerPort: 443
        args: ["--insecure"]
        volumeMounts:
        - name: argocd-data
          mountPath: /argocd/data
      volumes:
      - name: argocd-data
        persistentVolumeClaim:
          claimName: argocd-pvc
