argo-cd/src/argocd/repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-repo-server
  template:
    metadata:
      labels:
        app: argocd-repo-server
    spec:
      containers:
      - name: repo-server
        image: quay.io/argoproj/argocd-repo-server:v2.11.0
        ports:
        - containerPort: 8081
